--- a/src/main/resources/static/manage/foodList.html
+++ b/src/main/resources/static/manage/foodList.html
@@ -58,8 +58,8 @@
                         <img src="${element.foodImg}">
                         <figcaption>${element.foodName}</figcaption>
                         <p>
-                            <button type="button" class="layui-btn" onclick="updateFood(${element.foodId})">修改</button>
-                            <button type="button" class="layui-btn layui-btn-danger" onclick="deleteFood(this,'${element.foodId}')">删除</button>
+                            <button type="button" class="layui-btn" onclick="updateFood('${element.foodId}')">修改</button>
+                            <button type="button" class="layui-btn layui-btn-danger" onclick="deleteFood('${element.foodId}')">删除</button>
                         </p>
                     </figure>
                 </div>`;
