--- a/src/main/resources/static/manage/orderListByCondition.html
+++ b/src/main/resources/static/manage/orderListByCondition.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="lib/layui/css/layui.css">
-    <title>某分类下的全部菜品</title>
+    <title>订单总况</title>
     <style>
         .layui-form-label {
             width: 60px;
@@ -43,7 +43,7 @@
     <button class="layui-btn layui-btn-sm" onclick="javascript:location.reload();">
         <i class="layui-icon layui-icon-refresh-3"></i>
     </button>
-    <table id="allFoodByKind" lay-filter="allFoodByKind"></table>
+    <table id="orderByCondition" lay-filter="orderByCondition"></table>
 </div>
 
 
@@ -57,18 +57,18 @@
 <script>
     layui.use(['table', 'layer'], function () {
         const str = window.location.href;
-        const foodKindId = str.substr(str.indexOf('=') + 1);
+        const searchCondition = str.substr(str.indexOf('=') + 1);
 
         const path = location.protocol + "//" + window.location.host + "/starryfood";
         const table = layui.table,
             layer = layui.layer;
         //展示已知数据
         table.render({
-            elem: '#allFoodByKind',
+            elem: '#orderByCondition',
             toolbar: 'default',
             loading: true, //翻页加loading
-            url: path + '/food/getFoodsByKind?foodKindId=' + foodKindId, //数据接口(不需要带项目名)
-            parseData: function (res) { //res 即为原始返回的数据
+            url: path + '/order/getOrders?searchCondition=' + searchCondition,
+            parseData: function (res) {
                 return {
                     "code": res.code, //解析接口状态
                     "msg": res.msg, //解析提示文本
@@ -77,7 +77,7 @@
                 };
             },
             response: {
-                statusCode: 431 //规定成功的状态码，默认：0
+                statusCode: 631 //规定成功的状态码，默认：0
             },
             request: {
                 pageName: 'pageNum', //页码的参数名称，默认：page
@@ -91,40 +91,35 @@
                     type: 'numbers',
                     minWidth: 20,
                 }, {
-                    field: 'foodId',
-                    title: '菜品Id',
+                    field: 'orderId',
+                    title: '订单号',
                     width: '15%',
                     minWidth: 100,
                 }, {
-                    field: 'foodName',
-                    title: '菜品名称',
+                    field: 'orderConditionString',
+                    title: '订单状态',
                     width: '15%',
                     minWidth: 100,
-                },{
-                    field: 'foodHasSold',
-                    title: '已售数量',
+                }, {
+                    field: 'orderCreateCustomer',
+                    title: '下单人',
                     width: '15%',
                     minWidth: 100,
                 }, {
                     field: 'createTimeString',
-                    title: '创建时间',
+                    title: '下单时间',
                     width: '20%',
                     minWidth: 120,
-                },{
-                    field: 'createUser',
-                    title: '创建者',
+                }, {
+                    field: 'orderDealAdmin',
+                    title: '处理者',
                     width: '10%',
                     minWidth: 50,
                 }, {
                     field: 'updateTimeString',
-                    title: '上次修改时间',
+                    title: '上次处理时间',
                     width: '20%',
                     minWidth: 120,
-                },{
-                    field: 'updateUser',
-                    title: '修改者',
-                    width: '10%',
-                    minWidth: 50,
                 }, {
                     fixed: 'right',
                     width: '15%',
@@ -141,22 +136,25 @@
             id: "dataTable"
         });
 
-        // 数据重载（查询）
+        // 数据重载（查询某顾客的所有订单情况）
         const active = {
             reload: function () {
                 //执行重载
                 table.reload('dataTable', {
-                    url: path + '/customer/getByCustomerId',
+                    url: path + '/order/getByCustomerId',
                     parseData: function (res) { //res 即为原始返回的数据
-                        return {
-                            "code": res.code, //解析接口状态
-                            "msg": res.msg, //解析提示文本
-                            "count": 1, //解析数据总个数
-                            "data": [res.data], //解析数据列表
-                        };
+                        if (res.code == 631) {
+                            return {
+                                "code": res.code, //解析接口状态
+                                "msg": res.msg, //解析提示文本
+                                "count": res.count, //解析数据总个数
+                                "data": res.data.list //解析数据列表
+                            };
+                        }
+                        layer.msg(`${response.msg}`, {time: 1500,})
                     },
                     response: {
-                        statusCode: 331 //规定成功的状态码，默认：0
+                        statusCode: 631 //规定成功的状态码，默认：0
                     },
                     page: {
                         curr: 1 //重新从第 1 页开始
@@ -174,7 +172,7 @@
         });
 
         //监听行工具事件
-        table.on('tool(allFoodByKind)', function (obj) { //注：tool 是工具条事件名，test 是 table 原始容器的属性 lay-filter="对应的值"
+        table.on('tool(orderByCondition)', function (obj) { //注：tool 是工具条事件名，test 是 table 原始容器的属性 lay-filter="对应的值"
             const data = obj.data //获得当前行数据
                 , layEvent = obj.event; //获得 lay-event 对应的值
             if (layEvent == 'update') {
@@ -189,8 +187,8 @@
                 });
             } else if (layEvent == 'delete') {
                 layer.confirm('确认要删除吗？', {
-                        btn : [ '确定', '取消' ] // 按钮
-                    },function(){
+                    btn: ['确定', '取消'] // 按钮
+                }, function () {
                     $.ajax({
                         type: "get",
                         url: path + "/customer/delete?customerUuid=" + data.customerUuid,
@@ -203,7 +201,6 @@
                                         obj.del(); //删除对应行（tr）的DOM结构
                                 }
                             })
-
                         }
                     });
                 })
