完善条件查询各订单的功能，同时完成获取全部菜品带类别前端功能

--- a/src/main/resources/static/front/confirmOrder.html
+++ b/src/main/resources/static/front/confirmOrder.html
@@ -39,12 +39,7 @@
         <div id='cssmenu' class="align-center">
             <ul>
                 <li><a href='index.html'><span>Home</span></a></li>
-                <li class='has-sub'><a href='menu.html'><span>Menu</span></a>
-                    <ul >
-                        <li><a href='menu1.html'><span>Item 1</span></a></li>
-                        <li><a href='menu2.html'><span>Item 2</span></a></li>
-                    </ul>
-                </li>
+                <li><a href='menu.html'><span>Menu</span></a></li>
                 <li class='has-sub last active'><a href='#'><span>My</span></a>
                     <ul >
                         <li><a href='myOrder.html'><span>MyOrder</span></a></li>
@@ -158,6 +153,9 @@
                 success: function (response) {
                     layer.msg(`${response.msg}`, {
                         time: 1500,
+                        end:  function () {
+                           location.href = 'myOrder.html';
+                        }
                     })
                 }
             })
