--- a/src/main/resources/static/front/index.html
+++ b/src/main/resources/static/front/index.html
@@ -25,12 +25,7 @@
         <div id='cssmenu' class="align-center">
             <ul>
                 <li class="active"><a href='index.html'><span>Home</span></a></li>
-                <li class='has-sub'><a href='menu.html'><span>Menu</span></a>
-                    <ul >
-                        <li><a href='menu1.html'><span>Item 1</span></a></li>
-                        <li><a href='menu2.html'><span>Item 2</span></a></li>
-                    </ul>
-                </li>
+                <li><a href='menu.html'><span>Menu</span></a></li>
                 <li class='has-sub last'><a href='#'><span>My</span></a>
                     <ul >
                         <li><a href='myOrder.html'><span>MyOrder</span></a></li>
