--- a/src/main/resources/static/front/menu.html
+++ b/src/main/resources/static/front/menu.html
@@ -11,7 +11,20 @@
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/main.css">
-
+    <style>
+        .foodKindTitle{
+            border-color: #c6c6c6;
+            margin: 10px 0 20px;
+            border-width: 1px 0 0;
+            border-style: solid;
+        }
+        .foodKindTitle legend{
+            margin-left: 20px;
+            padding: 0 10px;
+            font-size: 20px;
+            font-weight: 300;
+        }
+    </style>
 </head>
 
 <body>
@@ -26,12 +39,7 @@
         <div id='cssmenu' class="align-center">
             <ul>
                 <li><a href='index.html'><span>Home</span></a></li>
-                <li class='has-sub active'><a href='menu.html'><span>Menu</span></a>
-                    <ul >
-                        <li><a href='menu1.html'><span>Item 1</span></a></li>
-                        <li><a href='menu2.html'><span>Item 2</span></a></li>
-                    </ul>
-                </li>
+                <li class='active'><a href='menu.html'><span>Menu</span></a></li>
                 <li class='has-sub last'><a href='#'><span>My</span></a>
                     <ul >
                         <li><a href='myOrder.html'><span>MyOrder</span></a></li>
@@ -54,9 +62,8 @@
                             <hr class="line-2">
                             <h2>Our menu</h2>
                         </div>
-                        <div class="art-content">
-                            <div class="row" id="row">
-                            </div>
+                        <!-- 动态渲染菜品内容 -->
+                        <div class="art-content" id="mainContent">
                         </div>
                     </article>
                 </div>
@@ -81,19 +88,35 @@
 
 <script src="js/jquery-3.3.1.js"></script>
 <script>
-    const path = location.protocol + "//" + window.location.host + "/starryfood/food/getAllFoods";
+    const path = location.protocol + "//" + window.location.host + "/starryfood/food/getAllFoodsWithKind";
     // 获取全部菜品
     $.ajax({
         type: "get",
         url: path,
         dataType: "json",
         success: function (response) {
-            // 容器下的row盒子
-            const row = $('#row');
-            for (let i = 0; i < response.data.list.length; i++) {
-                // 获取菜品对象
-                const element = response.data.list[i];
-                var itemContainer = `<div class="col-1-3">
+            // 获取成功
+            if (response.code == 531){
+                // 主内容容器
+                const mainContent = $('#mainContent');
+
+                for (let i = 0; i < response.data.list.length; i++) {
+                    // 获取菜品种类对象
+                    const elementKind = response.data.list[i];
+                    const row = $('<div class="row"></div>'); //容器下的row盒子
+                    const kindTitle = `<fieldset class="foodKindTitle">
+                                            <legend>${elementKind.foodKindName}类</legend>
+                                        </fieldset>`;
+                    row.append(kindTitle); //将种类标题添加到row盒子中
+
+                    // 获取每个种类下的菜品数组对象
+                    if (elementKind.foodExtendList == null) {// 如果该种类下还没有设置菜品则显示无
+                        break;
+                    }
+                    for(let j = 0; j < elementKind.foodExtendList.length; j++){
+                        // 得到该种类下的每个菜品对象
+                        const element = elementKind.foodExtendList[j];
+                        const itemContainer = `<div class="col-1-3">
                         <div class="wrap-col">
                             <div class="item-container">
                                 <a class="example-image-link" href="foodDetail.html?foodId=${element.foodId}">
@@ -110,10 +133,20 @@
                             </div>
                         </div>
                     </div>`
-                // 装入到行盒子中
-                row.append(itemContainer);
+                        // 装入到行盒子中
+                        row.append(itemContainer);
+                    }
+                    // 这个种类的行盒子装入主内容中
+                    mainContent.append(row);
+                }
+
+                console.log(response)
+            } else{
+                layer.msg(`${response.msg}`, {
+                    time: 1500,
+                })
             }
-            console.log(response)
+
         }
     });
 </script>
